[package]
name = "metric-relay"
version = "0.1.0"
authors = ["Jonas Schäfer <j.wielicki@sotecware.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.8", features = ["net", "macros", "rt", "rt-multi-thread"] }
# byteorder = { version = "1.4" }
num_enum = { version = "0.5" }
bytes = { version = "1.0" }
getrandom = { version = "0.2" }
