[package]
name = "metric_relay"
version = "0.1.0"
authors = ["Jonas Schäfer <j.wielicki@sotecware.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.8", features = ["net", "macros", "rt", "rt-multi-thread", "sync", "time", "io-util"] }
# byteorder = { version = "1.4" }
num_enum = { version = "0.5" }
bytes = { version = "1.0", features = ["serde"] }
getrandom = { version = "0.2" }
structopt = { version = "0.3" }
smartstring = { version = "0.2", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
byteorder = { version = "1.4" }
toml = { version = "0.5" }
serde = { version = "1"}
serde_derive = { version = "1" }
log = { version = "0.4" }
env_logger = { version = "0.9" }
glob = { version = "0.3" }
rand = { version = "0.8" }
bincode = { version = "1.3" }
tokio-util = { version = "0.6", features = ["codec"] }
futures = { version = "0.3" }
reqwest = { version = "0.11" }
base64 = { version = "0.13" }
microtemplate = { version = "1.0" }
xml-rs = { version = "0.8" }
openat = { version = "0.1" }
rand_xoshiro = { version = "0.6" }
rand_distr = { version = "0.4" }
