[package]
name = "metric_relay"
version = "0.1.0"
authors = ["Jonas Schäfer <j.wielicki@sotecware.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "^1.8", features = ["macros", "rt", "rt-multi-thread", "sync", "time", "io-util"] }
num_enum = { version = "^0.5" }
bytes = { version = "^1" }
getrandom = { version = "^0.2" }
structopt = { version = "^0.3" }
smartstring = { version = "^0.2", features = ["serde"] }
chrono = { version = "^0.4", features = ["serde"] }
byteorder = { version = "^1.4" }
toml = { version = "^0.5" }
serde = { version = "^1"}
serde_derive = { version = "^1" }
log = { version = "^0.4" }
env_logger = { version = "^0.9" }
glob = { version = "^0.3" }
bitvec = { version = "^0.22" }
rand = { version = "^0.8", optional = true }
bincode = { version = "^1.3", optional = true }
tokio-util = { version = "^0.6", features = ["codec"], optional = true }
futures = { version = "^0.3", optional = true }
reqwest = { version = "^0.11", optional = true, default-features = false}
base64 = { version = "^0.13", optional = true }
microtemplate = { version = "^1.0", optional = true }
xml-rs = { version = "^0.8", optional = true }
num-traits = { version = "^0.2", optional = true }
rustfft = { version = "^6.0", optional = true }
enum-map = { version = "^0.6", optional = true }
i2c-linux = { version = "^0.1", optional = true }
regex = { version = "^1.5", optional = true }
openat = { version = "^0.1", optional = true }
libc = { version = "^0.2", optional = true }
percent-encoding = { version = "^2.1", optional = true }


[dev-dependencies]
# only for rtc simulation example
rand_xoshiro = { version = "0.6" }
rand_distr = { version = "0.4" }

[features]
fft = ["rustfft", "num-traits"]
debug = ["num-traits", "rand"]
summary = []
numerics = ["fft", "summary", "detrend"]
influxdb = ["reqwest", "base64", "enum-map"]
pubsub = ["reqwest", "microtemplate", "xml-rs"]
sbx = ["tokio/net", "enum-map"]
relay = ["bincode", "tokio-util", "futures", "tokio/net", "rand", "metric-serde"]
smbus = ["i2c-linux"]
stream-filearchive = ["openat", "percent-encoding"]
detrend = []
metric-serde = ["bitvec/serde"]
default = ["numerics", "influxdb", "pubsub", "sbx", "relay", "debug", "smbus", "http-tls", "regex", "stream-filearchive"]
http-tls = ["reqwest/rustls-tls"]

[[example]]
name = "rtcsim"
required-features = ["rand"]
